lection-6/ingress/test-deployments/test1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test1-service
  namespace:  test
  labels:
    app: test1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: test1
