lection-6/ingress/test-deployments/test2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test2-ingress
  namespace:  test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test2.kubernetes.coach
    http:
      paths:
      - backend:
          serviceName: test2-service
          servicePort: 80
        path: /
