lection-6/ingress/test-deployments/test3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test3-ingress
  namespace:  test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test3.kubernetes.coach
    http:
      paths:
      - backend:
          serviceName: test3-service
          servicePort: 80
        path: /
